done after a long time

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <!-- 
-  Trae Feel free to remove these styles or customise in your own stylesheet 👍 
+Did well with relative units ...responsiveness with this one.
+But failed terribly when it comes to mobile view (too tired to start styling all over again for mobile),
+Also failed to apply image overlay on hover.
+Will study and research more to correct on next project.
+
+HTML is fine. Problem are CSS related.
 -->
 <body>
  <main>
